# Y_task

./: CMakeLists.txt  README.md
include/: ClientManager.h  ClubManager.h  CustomTime.h  ErrorHandler.h  Event.h  TableManager.h  TableStats.h
src/: ClientManager.cpp  ClubManager.cpp  CustomTime.cpp  ErrorHandler.cpp  Event.cpp  TableManager.cpp  TableStats.cpp  main.cpp
tests/: all_tests.cpp  input2.txt  input3.txt  input4.txt  input5.txt
